Archive2/1d/aea0b62385f499/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:5:19: error: invalid operands of types ‘const char [4]’ and ‘const char [6]’ to binary ‘operator+’
     str = "Say" + "Hello" + str + " World";
                   ^
